[tool.poetry]
name = "clothing-classifier"
version = "1.0.0"
description = "This model serve as a base for classifying clothing using PyTorch"
authors = ["Bleck Tita"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
torchvision = "^0.20.1"
torchmetrics = "^1.6.0"
torch = "^2.5.1"
seaborn = "^0.13.2"
captum = "^0.7.0"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
